Resolved footer misalignment and certification list order

--- a/resources/css/solas1.css
+++ b/resources/css/solas1.css
@@ -12,6 +12,7 @@
 
 .container {
 	width: 1200px !important;
+	margin-left: 6.5%;
 }
 
 .navbar-fixed-bottom .container {
